namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-probation-recruitment-merit-list-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-probation-recruitment-merit-list-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "people-analytics"
    cloud-platform.justice.gov.uk/application: "probation-recruitment-merit-list"
    cloud-platform.justice.gov.uk/owner: "people-analytics: peopleanalytics@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/probation-recruitment-merit-list"
    cloud-platform.justice.gov.uk/team-name: "probation-recruitment-merit-list-admin"
    cloud-platform.justice.gov.uk/review-after: "25-May-26"
